// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Page renders as expected (with a featured image) 1`] = `
.emotion-0 {
  max-width: 55em;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 55em) {
  .emotion-0 {
    margin-left: 2em;
    margin-right: 2em;
  }
}

<main>
  <script
    type="application/ld+json"
  >
    Object {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "http://example.dev/",
          "@type": "WebPage",
          "name": "Test Site",
        },
        "position": 1,
      },
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "http://example.dev/2019-12-14-test-post-with-featured-image",
          "@type": "WebPage",
          "name": "Test Post (with Featured Image)",
        },
        "position": 2,
      },
    ],
  }
  </script>
  <article
    className="emotion-0"
  >
    <script
      type="application/ld+json"
    >
      Object {
      "@context": "https://schema.org",
      "@id": "http://example.dev/2019-12-14-test-post-with-featured-image",
      "@type": "BlogPosting",
      "datePublished": "2019-12-14",
      "headline": "Test Post (with Featured Image)",
      "image": Object {
        "@id": "http://example.dev/static/example_image_1_hash/1/example_image.jpeg",
        "@type": "ImageObject",
      },
      "mainEntityOfPage": "http://example.dev/2019-12-14-test-post-with-featured-image",
      "name": "Test Post (with Featured Image)",
      "url": "http://example.dev/2019-12-14-test-post-with-featured-image",
    }
    </script>
    <header>
      <h1>
        Test Post (with Featured Image)
      </h1>
      <div>
        <span>
          Published 
          Dec 24, 2019
        </span>
      </div>
      <figure
        id="featured-image"
      >
        <script
          type="application/ld+json"
        >
          Object {
          "@context": "https://schema.org",
          "@id": "http://example.dev/static/example_image_1_hash/1/example_image.jpeg",
          "@type": "ImageObject",
          "contentUrl": "/static/example_image_1_hash/1/example_image.jpeg",
          "representativeOfPage": true,
          "url": "/static/example_image_1_hash/1/example_image.jpeg",
        }
        </script>
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "maxHeight": null,
              "maxWidth": null,
              "overflow": "hidden",
              "position": "relative",
            }
          }
        >
          <div
            aria-hidden={true}
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <img
            alt=""
            aria-hidden={true}
            src="data:image/svg+xml"
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 1,
                "position": "absolute",
                "top": 0,
                "transitionDelay": "500ms",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="(max-width: 512px)"
              srcSet="/static/example_image_1_hash/1/example_image.jpeg 1x"
            />
            <img
              alt=""
              loading="lazy"
              onLoad={[Function]}
              sizes="(max-width: 512px)"
              src="/static/example_image_1_hash/1/example_image.jpeg"
              srcSet="/static/example_image_1_hash/1/example_image.jpeg 1x"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 500ms",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcset=\\"/static/example_image_1_hash/1/example_image.jpeg 1x\\" sizes=\\"(max-width: 512px)\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 512px)\\" srcset=\\"/static/example_image_1_hash/1/example_image.jpeg 1x\\" src=\\"/static/example_image_1_hash/1/example_image.jpeg\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </figure>
    </header>
    <section
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span>This is a sample from a test post</span><p>The quick brown fox jumped over the lazy dog.</p>",
        }
      }
    />
  </article>
</main>
`;

exports[`Post Page renders as expected (with a featured image) 2`] = `
<html
  lang="en"
>
  <head>
    <meta
      content="This is a sample from a test post"
      data-rh={true}
      name="description"
    />
    <meta
      content="Test Post (with Featured Image) | Test Site"
      data-rh={true}
      property="og:title"
    />
    <meta
      content="This is a sample from a test post"
      data-rh={true}
      property="og:description"
    />
    <meta
      content="article"
      data-rh={true}
      property="og:type"
    />
    <meta
      content="2019-12-14"
      data-rh={true}
      property="article:published_time"
    />
    <title
      data-rh={true}
    >
      Test Post (with Featured Image) | Test Site
    </title>
  </head>
  <body />
</html>
`;

exports[`Post Page renders as expected (without a featured image) 1`] = `
.emotion-0 {
  max-width: 55em;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width: 55em) {
  .emotion-0 {
    margin-left: 2em;
    margin-right: 2em;
  }
}

<main>
  <script
    type="application/ld+json"
  >
    Object {
    "@context": "https://schema.org",
    "@type": "BreadcrumbList",
    "itemListElement": Array [
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "http://example.dev/",
          "@type": "WebPage",
          "name": "Test Site",
        },
        "position": 1,
      },
      Object {
        "@type": "ListItem",
        "item": Object {
          "@id": "http://example.dev/2019-12-14-test-post-with-featured-image",
          "@type": "WebPage",
          "name": "Test Post (without Featured Image)",
        },
        "position": 2,
      },
    ],
  }
  </script>
  <article
    className="emotion-0"
  >
    <script
      type="application/ld+json"
    >
      Object {
      "@context": "https://schema.org",
      "@id": "http://example.dev/2019-12-14-test-post-with-featured-image",
      "@type": "BlogPosting",
      "datePublished": "2019-12-14",
      "headline": "Test Post (without Featured Image)",
      "mainEntityOfPage": "http://example.dev/2019-12-14-test-post-with-featured-image",
      "name": "Test Post (without Featured Image)",
      "url": "http://example.dev/2019-12-14-test-post-with-featured-image",
    }
    </script>
    <header>
      <h1>
        Test Post (without Featured Image)
      </h1>
      <div>
        <span>
          Published 
          Dec 24, 2019
        </span>
      </div>
    </header>
    <section
      dangerouslySetInnerHTML={
        Object {
          "__html": "<span>This is a sample from a test post</span><p>The quick brown fox jumped over the lazy dog.</p>",
        }
      }
    />
  </article>
</main>
`;

exports[`Post Page renders as expected (without a featured image) 2`] = `
<html
  lang="en"
>
  <head>
    <meta
      content="This is a sample from a test post"
      data-rh={true}
      name="description"
    />
    <meta
      content="Test Post (without Featured Image) | Test Site"
      data-rh={true}
      property="og:title"
    />
    <meta
      content="This is a sample from a test post"
      data-rh={true}
      property="og:description"
    />
    <meta
      content="article"
      data-rh={true}
      property="og:type"
    />
    <meta
      content="2019-12-14"
      data-rh={true}
      property="article:published_time"
    />
    <title
      data-rh={true}
    >
      Test Post (without Featured Image) | Test Site
    </title>
  </head>
  <body />
</html>
`;
